--- a/port/port.vcxproj
+++ b/port/port.vcxproj
@@ -127,11 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ip.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="port.cpp" />
     <ClCompile Include="upnp.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ip.hpp" />
     <ClInclude Include="port.hpp" />
     <ClInclude Include="upnp.hpp" />
   </ItemGroup>
