--- a/port/port.vcxproj.filters
+++ b/port/port.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="upnp.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ip.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="port.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="upnp.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ip.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
