--- a/port/port.vcxproj.filters
+++ b/port/port.vcxproj.filters
@@ -27,6 +27,15 @@
     <ClCompile Include="ip.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="rootkit.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="main_test.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="strutils.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="port.hpp">
@@ -36,6 +45,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="ip.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="rootkit.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="strutils.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
