--- a/port/port.vcxproj.filters
+++ b/port/port.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="strutils.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="picosha2.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
